# stockdash

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: config.toml.sample  main.py
app/services/: config.py  utils.py
