[tool.poetry]
name = "stockdash"
version = "0.1.0"
description = ""
authors = ["Pumidol Leelerdsakulvong <pumidol.l@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
yfinance = "^0.2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
